feat: implement AI-powered restaurant menu extraction with Gemini

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,11 @@
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:password@localhost:5432/vegmenu"
+
+# Authentication
+BETTER_AUTH_SECRET="your-auth-secret-here"
+BETTER_AUTH_URL="http://localhost:3000"
+
+# Google Generative AI API Key
+# Get your API key from https://ai.google.dev/
+GOOGLE_GENERATIVE_AI_API_KEY="your-google-api-key-here"
