--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ai-sdk/react": "^1.1.18",
     "@hookform/resolvers": "^4.1.2",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -39,6 +40,7 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.476.0",
     "next": "^15.0.1",
+    "next-intl": "^3.26.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
